First customisation of index page, still need client testimonials and meet the team sections

--- a/css/v-shortcodes.css
+++ b/css/v-shortcodes.css
@@ -858,7 +858,8 @@
 }
 
 .feature-box-text-inner p:last-child {
-    margin-bottom: 0;
+	text-align: left;
+    margin-bottom: 3px;
 }
 
 .feature-box-icon:hover,
