--- a/css/v-animation.css
+++ b/css/v-animation.css
@@ -160,8 +160,53 @@
     transform: scale(1);
 }
 
+/* Meet the team div flip animation CSS
+================================================== */
 
+/* entire container - keeps perspective */
+.flip-container {
+    perspective: 1000px;
+}
 
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+    width: 230px;
+    height: 280px;
+/*    border: 1px solid black;  */
+}
+
+/* flip speed goes here */
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+
+    position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+    backface-visibility: hidden;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+    /* for firefox 31 */
+    transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
+}
 
 
 /* #CSS3 Keyframes
